# lox-interpreter

./: .gitignore  README.md
examples/: cake.lox  class.lox  closure2.lox  closure3.lox  closure4.lox  coffee.lox  counter.lox  expr.lox  fib.lox  for.lox  fun.lox  gc.lox  hello_world.lox  if.lox  inheritance.lox  init.lox  lexer_error.lox  lexical_scope.lox  loops.lox  shadow.lox  stack_trace.lox  super.lox  sync.lox
tree-walk/: CMakeLists.txt
tree-walk/include/: callable.hpp  class.hpp  environment.hpp  function.hpp  instance.hpp  interpreter.hpp  lox.hpp  parser.hpp  resolver.hpp  return.hpp  scanner.hpp  token.hpp  types.hpp  visitor.hpp
tree-walk/include/ast/: ast_visitor.hpp  expr.hpp  stmt.hpp
tree-walk/src/: class.cpp  environment.cpp  function.cpp  instance.cpp  interpreter.cpp  lox.cpp  main.cpp  parser.cpp  resolver.cpp  scanner.cpp
vm/: CMakeLists.txt
vm/include/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
vm/src/: chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
